-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
6.9
-
None
-
2
-
19a581b96 (dev)
-
Foundation Sprint 115
While trying to integrate MSVC C++20 developer build (https://codereview.qt-project.org/c/qt/qt5/+/567093) qt/qtnetworkauth fails to build
agent:2024/09/06 05:39:39 build.go:404: FAILED: src/oauth/CMakeFiles/NetworkAuth.dir/Debug/qabstractoauth2.cpp.obj agent:2024/09/06 05:39:39 build.go:404: sccache C:\PROGRA~1\MICROS~3\2022\PROFES~1\VC\Tools\MSVC\1439~1.335\bin\Hostx64\x64\cl.exe /nologo /TP -DNOMINMAX -DNetworkAuth_EXPORTS -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_NETWORKAUTH_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_GUI_LIB -DQT_MOC_COMPAT -DQT_NETWORK_LIB -DQT_NO_AS_CONST=1 -DQT_NO_CAST_TO_ASCII -DQT_NO_CONTEXTLESS_CONNECT=1 -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_FOREACH=1 -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QASCONST -DQT_NO_QEXCHANGE -DQT_NO_QSNPRINTF -DQT_STRICT_QLIST_ITERATORS -DQT_USE_QSTRINGBUILDER -DUNICODE -DWIN32 -DWIN64 -D_CRT_SECURE_NO_WARNINGS -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_UNICODE -D_USE_MATH_DEFINES -D_WIN64 -D_WINDLL -DCMAKE_INTDIR=\"Debug\" -IC:\Users\qt\work\qt\qtnetworkauth_build\src\oauth\NetworkAuth_autogen\include_Debug -IC:\Users\qt\work\qt\qtnetworkauth_build\include -IC:\Users\qt\work\qt\qtnetworkauth_build\include\QtNetworkAuth -IC:\Users\qt\work\qt\qtnetworkauth\src\oauth -IC:\Users\qt\work\qt\qtnetworkauth_build\src\oauth -IC:\Users\qt\work\qt\qtnetworkauth_build\include\QtNetworkAuth\6.9.0 -IC:\Users\qt\work\qt\qtnetworkauth_build\include\QtNetworkAuth\6.9.0\QtNetworkAuth -external:IC:\Users\qt\work\install\include\QtCore -external:IC:\Users\qt\work\install\include -external:IC:\Users\qt\work\install\mkspecs\win32-msvc -external:IC:\Users\qt\work\install\include\QtNetwork -external:IC:\Users\qt\work\install\include\QtCore\6.9.0 -external:IC:\Users\qt\work\install\include\QtCore\6.9.0\QtCore -external:IC:\Users\qt\work\install\include\QtGui -external:IC:\VulkanSDK\1.2.182.0\Include -external:W0 /DWIN32 /D_WINDOWS /GR /Z7 /RTC1 -std:c++20 -MDd /W3 -Zc:__cplusplus -permissive- -utf-8 /WX -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -Zc:referenceBinding -Zc:ternary -Zc:externConstexpr -Zc:wchar_t -bigobj /EHs-c- /wd4530 /wd4577 /showIncludes /Fosrc\oauth\CMakeFiles\NetworkAuth.dir\Debug\qabstractoauth2.cpp.obj /Fdsrc\oauth\CMakeFiles\NetworkAuth.dir\Debug\ /FS -c C:\Users\qt\work\qt\qtnetworkauth\src\oauth\qabstractoauth2.cpp agent:2024/09/06 05:39:39 build.go:404: C:\Users\qt\work\qt\qtnetworkauth\src\oauth\qabstractoauth2.cpp(557): error C2220: the following warning is treated as an error agent:2024/09/06 05:39:39 build.go:404: C:\Users\qt\work\qt\qtnetworkauth\src\oauth\qabstractoauth2.cpp(557): warning C4996: 'QAbstractOAuth2::scopeChanged': Use requestedScope and grantedScope properties instead.
- blocks
-
QTBUG-127127 Dev / 6.8 branches of qt5.git have no platform configurations building examples for Windows MSVC
-
- Closed
-
For Gerrit Dashboard: QTBUG-128739 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
589396,2 | Ignore deprecated code ('scope') usage warning properly | dev | qt/qtnetworkauth | Status: MERGED | +2 | +1 |