Ignore deprecated code ('scope') usage warning properly

The 'scope' is marked deprecated starting Qt 6.11

Fixes: QTBUG-128739
Change-Id: I4c522f95c43467922655d4c16b17c40a23725a3f
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>